--- a/.travis.yml
+++ b/.travis.yml
@@ -10,19 +10,19 @@ addons:
 matrix:
   include:
     # linux
-    - os: linux   # abi 47
-      env: NODE_VERSION="5.1.1" CXX="g++-4.9"
-    - os: linux   # abi 48
+    - os: linux
       env: NODE_VERSION="6" CXX="g++-4.9"
-    - os: linux   # abi 49
-      env: NODE_VERSION="6" ELECTRON="1.3.6" CXX="g++-4.9"
+    - os: linux
+      env: NODE_VERSION="10" CXX="g++-4.9"
+    - os: linux
+      env: NODE_VERSION="12.14.1" ELECTRON="9.3.4" CXX="g++-4.9"
     # os x x86
-    - os: osx
-      env: NODE_VERSION="5.1.1" CXX="clang"
     - os: osx
       env: NODE_VERSION="6" CXX="clang"
     - os: osx
-      env: NODE_VERSION="6" ELECTRON="1.3.6" CXX="clang"
+      env: NODE_VERSION="10" CXX="clang"
+    - os: osx
+      env: NODE_VERSION="12.14.1" ELECTRON="1.3.6" CXX="clang"
 
 before_install:
   - rm -rf ~/.nvm/ && git clone --depth 1 "https://github.com/creationix/nvm.git" ~/.nvm
@@ -33,16 +33,16 @@ before_install:
 
 install:
   - if [[ -n "$ELECTRON" ]]; then
-      export npm_config_target=$ELECTRON;
-      export npm_config_disturl=https://atom.io/download/atom-shell;
-      export npm_config_runtime=electron;
-      export npm_config_build_from_source=true;
+    export npm_config_target=$ELECTRON;
+    export npm_config_disturl=https://atom.io/download/atom-shell;
+    export npm_config_runtime=electron;
+    export npm_config_build_from_source=true;
     fi
   - npm install
 
 script:
   - if [[ -z "$ELECTRON" ]]; then
-      npm test;
+    npm test;
     fi
   - node-pre-gyp package testpackage
 
