--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@atom/fuzzy-native",
+  "name": "@pulsar/fuzzy-native",
   "version": "1.2.1",
   "description": "Native C++ implementation of a fuzzy string matcher.",
   "main": "lib/main.js",
@@ -18,10 +18,10 @@
     "string"
   ],
   "author": "Hanson Wang (hanson.wng@gmail.com)",
-  "repository": "https://github.com/atom/fuzzy-native",
+  "repository": "https://github.com/pulsar-edit/fuzzy-native",
   "license": "MIT",
   "dependencies": {
-    "nan": "^2.14.2"
+    "nan": "2.17.0"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5",
