@pulsar -> @pulsar-edit

--- a/package.json
+++ b/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pulsar/fuzzy-native",
+  "name": "@pulsar-edit/fuzzy-native",
   "version": "1.2.1",
   "description": "Native C++ implementation of a fuzzy string matcher.",
   "main": "lib/main.js",
