--- a/package.json
+++ b/package.json
@@ -21,7 +21,7 @@
   "repository": "https://github.com/pulsar-edit/fuzzy-native",
   "license": "MIT",
   "dependencies": {
-    "nan": "2.17.0"
+    "nan": "^2.17.0"
   },
   "devDependencies": {
     "jasmine-node": "^1.14.5",
